# test-ghcide-cross-lh

./: .gitignore  README.md  cabal.project  hie.yaml  toy-package-a.cabal
.vim/: coc-settings.json
src/: Evens.hs
src/.liquid/: Evens.hs.cst.html  Evens.hs.html  Evens.hs.json  Evens.hs.smt2  Evens.hs.vim.annot
src/Foo/Bar/: Example.hs
src/Foo/Bar/.liquid/: Example.hs.cst.html  Example.hs.html  Example.hs.json  Example.hs.smt2  Example.hs.vim.annot
src/Toy/: A.hs  B.hs
src/Toy/.liquid/: A.hs.cst.html  A.hs.html  A.hs.json  A.hs.smt2  A.hs.vim.annot  B.hs.cst.html  B.hs.html  B.hs.json  B.hs.smt2  B.hs.vim.annot
